<resources>
    <string name="app_name">DemoChat</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="back_to_registration">Back to registration</string>
    <string name="insert_image">Insert Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="dummy">dummy</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="latest_message">Latest Message</string>
    <string name="new_mess">New Mess</string>

</resources>